--- a/src/style.css
+++ b/src/style.css
@@ -52,7 +52,7 @@
 	color:#ffffff;
 	font-family:Arial;
 	font-size:15px;
- margin-right: 10px;
+  margin-right: 10px;
 	text-decoration:none;
   min-height: 15px;
   justify-content: center;
@@ -74,10 +74,6 @@
 @import url(
 'https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
-body {
-    font-family: 'Poppins', sans-serif;
-    
-}
 
 h1 {
     color: rgb(41, 107, 41);
@@ -100,7 +96,7 @@ h3 {
  .AMENITIES {
   text-align: center;
   color: #3dc21b;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family:  Arial, sans-serif;
 
  }
 .gallerybox {
@@ -169,7 +165,7 @@ input[type="submit"] {
   border-radius: 5px;
   font-weight: bold;
   font-size: 18px;
-  font-family: "Courier New", Courier, monospace;
+  font-family: "Courier New";
   color: white;
   margin-top: 30px;
   padding: 20px;
